--- a/src/components/imageWrapper/ImageWrapper.module.scss
+++ b/src/components/imageWrapper/ImageWrapper.module.scss
@@ -2,4 +2,10 @@
 .innerImageWrapper {
   width: 100%;
   height: 100%;
+
+  .nonGatsbyImage {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
 }
